# chickenwing

./: .gitignore  README.md  chickenwing.spec  pyproject.toml  yessir.py
.github/workflows/: build-windows-exe.yml  download-stats.yml
chickenwing/: __init__.py  __main__.py  app.py  cli.py
docs/: winget.md
packaging/winget/manifests/c/Chyckenwing/Chickenwing/0.1.0/: Chyckenwing.Chickenwing.installer.yaml  Chyckenwing.Chickenwing.locale.en-US.yaml  Chyckenwing.Chickenwing.yaml
scripts/: build-windows-exe.ps1  generate-winget-manifests.py  release-download-stats.py
